--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 APP_KEY=base64:UdAH2B63rlotjrkSSsj3Hppy4gbfr+OeHvtSdF9r9q8=
 APP_DEBUG=true
+
+DB_HOST = localhost
+DB_DATABASE = x-profiles
+DB_USERNAME = root
+DB_PASSWORD = 
